--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^6.2.8",
+    "i18next": "^21.6.14",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.16.2",
     "react-scripts": "5.0.0",
     "react-svg-blob": "^0.3.0",
     "web-vitals": "^2.1.4"
