--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "framer-motion": "^6.2.8",
     "gh-pages": "^3.2.3",
     "i18next": "^21.6.14",
-    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.16.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-svg-blob": "^0.3.0",
+    "sass": "^1.53.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
